master
======

- The spec can point to a local file/directory for install
- Read the sha1 from the META.json as it may be different from the one
  in the dist.json


pgxn.client 0.1a3
=================

- Fixed executable mode for scripts unpacked from the zip files.
- Added 'list' and 'info' commands.


pgxn.client 0.1a2
=================

- Added database connection parameters for the 'check' command.


pgxn.client 0.1a1
=================

- Fist version released on PyPI.